@@ -1,4 +1,5 @@
 0.6.0
+* arg.fs: new module (Arguments parser) (2007-07-09)
 * config.fs: 0e0->0E+0, 1e0->1E+0, 2e0->2E+0 (2007-06-25)
 0.5.0
 * config.fs: #bits/byte uses environment (2007-06-07)
